2009-02-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/irq/irq.h: Fix spelling error.

2008-09-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/comm/i386-stub.c: Include stdbool.h.

2008-09-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/comm/i386-stub.c, shared/irq/irq.c: Misc. "bool" changes.

2008-08-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/irq/irq_init.c: Reverse previous incorrect changes. Correct
	warnings and ensure BSP still works.

2008-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/comm/i386-stub.c, shared/irq/irq_init.c: Fix warnings for
	prototypes, types, etc.

2008-08-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/comm/i386-stub-glue.c, shared/comm/i386-stub.c:
	Add missing prototypes.
	* shared/irq/irq_init.c: Add missing prototypes.

2008-05-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/comm/tty_drv.c: Eliminate copies of switches to convert
	termios Bxxx constants to xxx as an integer. Use the shared
	termios_baud_to_number() routine to do the same conversion.

2008-04-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/comm/tty_drv.c: Remove all references to
	console_reserve_resources and termios_reserve_resources.

2007-11-06	Till Straumann <strauman@slac.stanford.edu>

	* shared/irq/irq.c: test for non-NULL-ness before calling
	'on'/'off' methods so that users don't have to provide
	no-ops if they don't want this feature.

2007-09-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1257/bsps
	* shared/irq/idt.c, shared/irq/irq.c, shared/irq/irq_init.c: Code
	outside of cpukit should use the public API for
	rtems_interrupt_disable/rtems_interrupt_enable. By bypassing the
	public API and directly accessing _CPU_ISR_Disable and
	_CPU_ISR_Enable, they were bypassing the compiler memory barrier
	directive which could lead to problems. This patch also changes the
	type of the variable passed into these routines and addresses minor
	style issues.
